--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,8 @@ android {
 }
 
 dependencies {
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha02"
+    // cOMPOSE
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha03"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha13'
@@ -63,25 +64,31 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager:0.22.0-rc"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.24.11-rc"
 
+    // Kotlin coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
 
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.7"
 
+    // Dagger Hilt
     implementation "com.google.dagger:hilt-android:2.40.5"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
+    // Glide
     implementation "com.github.skydoves:landscapist-glide:1.5.2"
 
     def room_version = "2.4.2"
 
+    // Room
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt("androidx.room:room-compiler:$room_version")
 
+    // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
